Customized tabs. Refactoring. Comments.

--- a/Healthy Eating/Healthy Eating.csproj
+++ b/Healthy Eating/Healthy Eating.csproj
@@ -300,6 +300,12 @@
     <AndroidResource Include="Resources\drawable\info_border.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\parameters_border.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\message_Parameters.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\StartPage.axml" />
@@ -339,7 +345,7 @@
     <AndroidResource Include="Resources\drawable\info.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\pause_by_billlet_doux-daughbe.jpg" />
+    <AndroidResource Include="Resources\drawable\parameters.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
